err/django-cachebuster.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cachebuster'...
Listing './lib/python3.5/site-packages/cachebuster/detectors'...
Compiling './lib/python3.5/site-packages/cachebuster/detectors/git.py'...
***   File "./lib/python3.5/site-packages/cachebuster/detectors/git.py", line 20
    raise EnvironmentError, "django-cachebuster could not find a '.git' directory in your project path. (Moving up from %s)" % original_dir
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cachebuster/templatetags'...
Compiling './lib/python3.5/site-packages/cachebuster/templatetags/cachebuster.py'...
***   File "./lib/python3.5/site-packages/cachebuster/templatetags/cachebuster.py", line 38
    raise template.TemplateSyntaxError, "'%r' tag must have one or two arguments" % token.contents.split()[0]
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_cachebuster-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
